# mmpdenet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: mmpde.qmd
mmpdenet/: loss.py
tests/: test_file.py
