[tool.poetry]
name = "mmpdenet"
version = "0.1.0"
description = ""
authors = ["Shao-Ting Chiu <stchiu@email.tamu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
equinox = "^0.11.4"
jax = "^0.4.27"
optax = "^0.2.2"
ipykernel = "^6.29.4"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
